<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_app_material">Make your app Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="app_portfolio">My App Portfolio</string>
    <string name="check_out_apps">Check out my Apps!</string>
</resources>
