<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:orientation="vertical"
                android:gravity="center">

    <TextView
        android:id="@+id/these_my_apps"
        android:text="@string/check_out_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:textColor="#90A4AE"/>

    <Button
        android:id="@+id/popular_movies"
        android:text="@string/popular_movies"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/stock_hawk"
        android:text="@string/stock_hawk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/build_it_bigger"
        android:text="@string/build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/app_material"
        android:text="@string/make_app_material"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/ubiquitous"
        android:text="@string/go_ubiquitous"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/capstone"
        android:text="@string/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#607D8B"
        android:layout_margin="10dp"/>

</LinearLayout>
